Versão atualizada comp pablo

--- a/views/cadastrar.handlebars
+++ b/views/cadastrar.handlebars
@@ -3,7 +3,7 @@
         <div id="registrar" class="row justify-content-center align-items-center" >
             <div class="container-registrousuario">  
                      <div id="registro-row" class="row justify-content-center align-items-center" >                 
-                            <form id="registrar-form" name="registrar" class="form" action="/cadastrar"  method="POST">
+                            <form id="registrar-form" name="registrar" class="form" action="/cadastrar" onsubmit="return senhaForm()" method="POST">
                                 <h2 class="text-center text-info">Registrar Usuário</h2>
                             <!------------------------------------------------------------------------>
                             
