--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,8 @@
         <li><a href="/mapageral">Mapa Geral</a></li>
        <li><a href="/sobre">Sobre</a></li>
        <li><a href="/team">Team</a></li>
-       <li><a href="/login">Login</a></li>
+       <li><a href="/login"><img src="/img/perfi.png" alt="Login"></a></li>
+       
      </ul>
    </header>
    <section class = "banner"> </section>
