--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,6 +76,13 @@ header ul li a{
 }
 
 
+
+header ul li a img{
+    width: 20px;
+    background-color: #fff;
+  
+}
+
 header.sticky .logo,
 header.sticky ul li a{
 
