--- a/views/maps.handlebars
+++ b/views/maps.handlebars
@@ -1,3 +1,18 @@
+<script>
+//sessionStorage.clear
+
+if(JSON.parse(sessionStorage.getItem('session')) == undefined ) {
+  window.location.replace("http://localhost:3002/login");
+}
+  let  auth = JSON.parse(sessionStorage.getItem('session'))
+
+      name = auth.name;
+      email = auth.email;
+      id = auth.id;
+
+     {{{body}}}
+
+</script>
 
 <script type="text/javascript">
     let header = document.querySelector("header"); //fixar efeito barra de menu
@@ -11,6 +26,7 @@
 
 </script>
 	
+
 <script>
 function iniciarMap(){
 
