--- a/views/mapageral.handlebars
+++ b/views/mapageral.handlebars
@@ -3,6 +3,19 @@
     var header = document.querySelector("header"); //fixar efeito barra de menu
       header.classList.toggle("sticky",window.scrollY = 1);
   
+//sessionStorage.clear
+
+if(JSON.parse(sessionStorage.getItem('session')) == undefined ) {
+  window.location.replace("http://localhost:3002/login");
+}
+  let  auth = JSON.parse(sessionStorage.getItem('session'))
+
+      name = auth.name;
+      email = auth.email;
+      id = auth.id;
+
+     {{{body}}}
+
 </script>
 	
 <script>
