--- a/views/gerenciar.handlebars
+++ b/views/gerenciar.handlebars
@@ -1,19 +1,24 @@
 
 <body class="home">
-
+<div  class="container">
+  
   <div class="linha">
     <h1 id="h2home">Usuarios</h1>
 </div>
 
-<div id="list">
+<div id="list" class="row">
     <ul id="usuariolist">
-        <lh id="nomegerencia"><br>Nome</lh>
-        <lh id="emailgerencia"><br>Email</lh>
+
+    <div id="tab" >
+        <div class="col s1">NOME</div>
+        <div class="col s1">EMAIL</div>
+    </div>
+
     </ul>
 </div>
 
 
-
+</div>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
