--- a/views/mapageral.handlebars
+++ b/views/mapageral.handlebars
@@ -1,6 +1,6 @@
 
 <script type="text/javascript">
-    var header = document.querySelector("header"); //fixar efeito barra de menu
+    var header = document.querySelector("nav"); //fixar efeito barra de menu
       header.classList.toggle("sticky",window.scrollY = 1);
   
 //sessionStorage.clear
