--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -1,3 +1,4 @@
+  
 <script>
 //sessionStorage.clear
 
@@ -16,12 +17,16 @@ if(JSON.parse(sessionStorage.getItem('session')) == undefined ) {
 
 <body class="home">
 
-  <div class="linha">
+  <div class="materialize"  >
+    <h2> Modals </h2>
+      <a href="#terms" class="btn orange modal-trigger"> Terms & Conditions</a>
 
-    <h2>Controle de manobras</h2>
-    <h4></h4>
-    <h1>---Team---</h1>
-</div>
+      <div class="modal" id="terms">
+          test
+
+      </div>
+
+  </div>
 
 
 
