--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,118 +2,99 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700');
 
 
-header{
+nav{     
     position: fixed;
     font-family:'Poppins', sans-serif; 
     text-align: center;
     top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: 0.6s;
-    padding: 2% 5%;
+    left: 0;   
     z-index: 100000;
-   
+    background-color: #000;
+    
+    
 }
 
-.tudo{
 
-    min-height: 100%;
+nav.stickynone{
+    background: transparent;
+    height: 85px;
 }
 
-header.sticky{
-
-        padding: 0.5% 5%;
+nav.sticky{
         background: #fff;
-
 }
 
 
-header .logo{
+nav.sticky .logo,
+nav.sticky ul li a{
 
+    color: #000;
+}
+
+nav .logo{
     position: relative;
-    font-weight: 700;
+    font-weight: 650;
     color: #fff;
     text-decoration: none;
-    font-size: 2em;
+    font-size: 1.8em;
     text-transform: uppercase;
     letter-spacing: 2px;
     transition: 0.6s;
-    justify-content: flex-start;
-    
+    text-align: left;
+   
 }
 
-header ul{
-
-    position: relative;
-    display: flex;
-    align-items: center;
-    margin-right: 5%;
-    justify-content: flex-start;
-    
-}
-
-header ul li{
-
-    position: relative;
+nav ul li{
     list-style: none;
-    justify-content: flex-start;
-    margin: 2px;
-  
-    
-
 }
 
-header ul li a{
+nav ul li a{
 
     position: relative;
     margin: 10px 15px;
     text-decoration: none;
     color: #fff;
     letter-spacing: 2px;
-    font-weight: 500px;
     transition: 0.6s;
     font-weight: bolder;
-
 }
 
 
 
-header ul li a {
+nav ul li a {
     text-decoration: none;
-    
+    text-align: right;
+    float: right;
 }
 
 
-header ul li #perfilbtn{
+nav ul li #perfilbtn{
 
     font-size: 14px;  
     
 }
 
 
-header ul li img{
-   
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    margin-top: -20px;
+nav ul li img{
+    text-align: right;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 60px;
+    height: 70px;
+    margin-top: 2px;
     margin-right: -25px;
-
-}
-
-header.sticky .logo,
-header.sticky ul li a{
-
     color: #000;
+
 }
 
-header ul #hovermenu:hover {
-    background: #4A7995;
-    box-shadow: 0 0 0 4px #333;
-    box-shadow: 0 0 0 6px #4A7995;
+
+
+
+nav ul #hovermenu:hover {
+    height: 85px;
+    background: #4a5d68;
+    box-shadow: 0 0 0 2px #333;
+    box-shadow: 0 0 0 0px #4A7995;
     opacity: 0.81;
     
 }
@@ -121,28 +102,27 @@ header ul #hovermenu:hover {
 
 
 
-body{       
-   position: relative;                                                                                                            
+body{      
+    margin-top: 100px; 
+    position: relative;  
+    align-items: baseline;                                                                                                          
     margin: 0;
-    padding: 0;
-    display: flex; 
-    justify-items: center;
-    align-items: center;
-    height:  100vh;
+    padding: 2;
     background-image: url("/img/imgSite.png");
     background-size: 100% 100%;
-    background-attachment: fixed;
     font-family:'Poppins', sans-serif; 
-    margin-bottom: 40px
-  
+    
 }
 
- div ul{
-    top: 40%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%);
-    width: 550px;
+
+
+div #banner{
+   margin-top: 100px;
+}
+
+
+#list{
+    width: 700px;
     margin: 7% auto 0;
     padding: 5px;
     box-sizing: border-box;
@@ -150,11 +130,13 @@ body{
     box-shadow: inset 0 0 15px rgba(0,0,0,.2);
     border-radius: 5px;
     overflow: hidden;
-    margin-bottom: 5%;
     font-size: 13px;
+    margin-top: 100px;
+    height: 100%;
+  
 }
 
- div ul li{
+ div ul .lihover{
     display: flex;
     background: rgba(255,255,255,.1);
     padding: 2% 4%;
@@ -162,13 +144,16 @@ body{
     margin:2px 0;
     transition: 0.5s;
     cursor: pointer; 
+    margin-left:1%;
+    
 }
 
 div ul li .content{
     position: fixed;
-    top: -100%;
+    top: -60%;
     left: 50%;
     width: 30%;
+    height: 380%;
     background: #fff; 
     padding: 12px;
     border-radius: 6px;
@@ -192,31 +177,43 @@ div ul li:hover .content{
   
 }
 
-div ul lh{
+div #tab{
     display: inline-flex;
-    background: rgba(255,255,255,.1);
-    padding: 5px 31.9px;
+    background: rgba(255,255,255,0.3);
+    padding: 12px ;
     color: #fff;
     margin:5px 0;
-    height: 100%;
-    text-align: center;
-    line-height: 100%;
+    width: 99%;
+    margin-left: 6px;
     font-weight: bolder;
     font-family:'Poppins', sans-serif; 
+    height: 50px;
     
     
 }
 
+div .row .col.s1 {
+    color: #fff;
+    margin-left: 104px;
+}
+
+div .row .col.s1 .navio{
+    color: #fff;
+    margin-left: 150px;
+}
+
+
+
 div ul li:nth-child(1)
 {
-    background: rgba(255, 255, 255,.6);
+    background: rgba(255, 255, 255,.4);
 
 
 }
 
 div ul li:nth-child(2)
 {
-    background: rgba(255, 255, 255,.4);
+    background: rgba(255, 255, 255,.1);
     
 }
 
@@ -228,18 +225,19 @@ div ul li:nth-child(1)
 div ul li span:nth-child(1)
 {
     width: 125%;
+    text-align: center;
    
 }
 
 div ul li span:nth-child(2)
 {
-    width: 80%;
+    width: 70%;
 }
 
 div ul li span:nth-child(3)
 {
     width: 60%;
-    text-align: right;
+    text-align: center;
 }
 
 div ul li span:nth-child(4)
@@ -254,40 +252,10 @@ div ul li:hover{
   
 }
 
-div ul #navio{
-    
-    width: 22%;
-    text-align: center;
-}
-
-div ul #agencia{
-    
-    width: 10%;
-    text-align: center; 
-}
-
-div ul #hora{
-    
-    width: 14%;
-    text-align: center; 
-}
-
-div ul #nomegerencia{
-    
-    width: 37.7%;
-    text-align: center; 
-}
-
-div ul #emailgerencia{
-    
-    width: 38%;
-    text-align: center; 
-}
-
 
 body.home #h2home{
    
-    position: absolute;
+    position: relative;
     font-family:'Open Sans', sans-serif;
     top: 15%;
     left: 50%;
@@ -303,13 +271,12 @@ body.home #h2home{
 
 body.home #h1home{
    
-    position: absolute;
+    position: relative;
     font-family:'Open Sans', sans-serif;
     top: 25%;
     left: 50%;
     transform: translate(-50%);
     width: 100%;
-    margin: 7% auto 0;
     padding: 5px;
     box-sizing: border-box;
     text-align: center;
@@ -320,33 +287,15 @@ body.home #h1home{
 }
 
 
-body.home #h4home{
-
-    position: absolute;
-    top: 49%;
-    left: 50%;
-    transform: translate(-50%);
-    width: 100%;
-    margin: 7% auto 0;
-    padding: 5px;
-    box-sizing: border-box;
-    text-align: center;
-    color: #fff;
-    font-size: 300%;
-    border-bottom: 1px solid;
-    margin-top: -6%;
-    width: 4%;
-    color: rgb(255, 62, 104);
-
-}
 
 
 
 /*----------------------------------------------------------------------------login------------------------------------------------------------------------------------*/
 
 
-  #login .container #login-row #login-column #login-box {
-    position: absolute;
+  #login-form {
+    position: relative;
+    margin-top: 150px;
     top: 23%;
     left: 50%;
     transform: translate(-50%);
@@ -359,7 +308,7 @@ body.home #h4home{
     color: #fff;
   }
 
-  #login .container #login-row #login-column #login-box #login-form {
+  #login-form {
     padding: 20px;
     text-align: center;
     
@@ -381,19 +330,21 @@ body.home #h4home{
   /*----------------------------------------------------------------------------Registrar------------------------------------------------------------------------------------*/
 
   #registrar {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%);
-    width: 40%;
-    height: 70%;
-    border-radius: 2%;
+
+    
+    color: #fff;
+    width: 700px;
+    margin: 7% auto 0;
+    padding: 5px;
     box-sizing: border-box;
     background: rgba(2, 5, 24, 0.4);
     box-shadow: inset 0 0 15px rgba(0,0,0,.2);
-    color: #fff;
-    padding: 4%;
-    text-align: left;
+    border-radius: 5px;
+    overflow: hidden;
+    font-size: 13px;
+    margin-top: 100px;
+    height: 100%;
+  
 
   }
 
