--- a/views/cadastrar.handlebars
+++ b/views/cadastrar.handlebars
@@ -1,5 +1,8 @@
-<body>
-<main>                                                                                                                     <!-- MAIN Area de conteudo principal do site-->                                                                                                                   <!-- MAIN Area de conteudo principal do site-->
+<body class="home">
+
+
+<main>     
+    <div  class="container">                                                                                                                 <!-- MAIN Area de conteudo principal do site-->                                                                                                                   <!-- MAIN Area de conteudo principal do site-->
         <div id="registrar" class="row justify-content-center align-items-center" >
             <div class="container-registrousuario">  
                      <div id="registro-row" class="row justify-content-center align-items-center" >                 
@@ -7,12 +10,12 @@
                                 <h2 class="text-center text-info">Registrar Usuário</h2>
                             <!------------------------------------------------------------------------>
                             
-                                <div class="form-group">
+                                <div class="form-group" >
                                     <label for="name" class="text-info" >Nome Completo:</label>
                                     <input type="text" name="name" id="name" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <label for="email" class="text-info">Email:</label>
+                                    <label for="email" class="text-info" >Email:</label>
                                     <input type="email" name="email" id="email" class="form-control">
                                 </div>
                                 <div class="form-group">
@@ -31,6 +34,7 @@
                 </div>
             </div>
         </div>
+        </div>  
     </main>
 
 </body>
