--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,29 +3,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Praticagem de Manaus</title>
-  <link rel="stylesheet" href="/css/styles.css">  
+    <title>Praticagem de Manaus</title> 
+   <link rel="stylesheet" href="/css/styles.css"> 
+   <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> 
     <script src="/js/scripts.js"></script>
-  </head>    
-   
-   <header class="container">
-     <a href="/" class="logo">Praticagem de Manaus</a>
-     <ul>
-       <li id="hovermenu"><a href="/">Controle de Manobras</a></li>
-        <li id="hovermenu"><a href="/mapageral">Mapa Geral</a></li>
-       <li id="hovermenu"><a href="/team">Team</a></li>
-       <li><img href="/perfil" src="/img/perfil.png" alt="Login"></li>
-       <li id="hovermenuperfil"><a id="perfilbtn" href="/perfil" >LOGIN</a></li>
-       
-     </ul>
-   </header>
-   <section class = "banner"> </section>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+     <script src="https://cdnjs.cloudfare.com/ajax/libs/materialize/1.0.0/js/materialize.mim.js"></script>
+  </head>
 
-   <script type="text/javascript"> // efeito rolamento da pagina
-    window.addEventListener("scroll",function(){
-      var header = document.querySelector("header");
+
+  <nav class="nav-wrapper stickynone">
+   <a href="/" class="logo">Praticagem de Manaus</a>
+      <ul id="nav-mobile" class="right">
+        <li id="hovermenu"><a href="/">Controle de Manobras</a></li>
+        <li id="hovermenu"><a href="/mapageral">Mapa Geral</a></li>
+        <li id="hovermenu"><a href="/team">Team</a></li>
+        <li id="hovermenu"><img href="/perfil" src="/img/perfil.png" alt="Login"><a id="perfilbtn" href="/perfil" >LOGIN</a></li>
+      </ul>
+    
+  </nav>
+
+
+
+   <script type="text/javascript"> 
+    window.addEventListener("scroll",function(){ // efeito rolamento da pagina
+      var header = document.querySelector("nav");
       header.classList.toggle("sticky",window.scrollY > 0);
-    })
+    });
+
+
 
     //sessionStorage.clear();
 
@@ -39,17 +45,17 @@
     let string = name;
     let primeironame = string.split(" ");
 
-    document.getElementById("perfilbtn").innerHTML= `${primeironame[0]}!"`
+    document.getElementById("perfilbtn").innerHTML= `${primeironame[0]}`
    
     console.log(name)
   }
    </script>
   
-      
+   
     {{{body}}}
     
 
-</body>
+
 
     
 </html>
