--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,18 @@
-<body>
-<main>                                                                                                                     <!-- MAIN Area de conteudo principal do site-->
-        <div id="login">
-            <div class="container">
-                <div id="login-row" >
-                    <div id="login-column" >
-                        <div id="login-box" >
-                            <form id="login-form" class="form" >
-                                <h2 class="text-center text-info" >Login</h2>
+
+
+<body class="home">
+<div  class="container">
+
+<div class="row" id="">
+    <h2 id="h2home">Controle de manobras</h2>
+
+    <h1 id="h1home">Estimated Arrivals</h1>
+</div>
+
+<div id="list" class="row">
+
+    <ul id="navioslist">
+                                <h2 class="" >Login</h2>
                                 <div class="form-group">
                                     <label for="username" class="text-info">Usuário:</label><br>
                                     <input type="text" name="email" id="username" class="form-control">
@@ -16,19 +22,21 @@
                                     <input type="password" name="password" id="password" class="form-control">
                                 </div>
                                 <div class="form-group-submit">
-                                    <input type="submit"  name="submit" id="btn" value="submit" >
+                                    <input type="submit"  class="btn btn-info btn-md" name="submit" id="btn" value="submit" >
                                 </div>
                                 <div id="register-link" style="text-align: end;">
                                     <a href="/cadastrar" class="text-info" >Registre-se agora</a>
                                 </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-</body>
+     </form>
+   
+    </ul>
+
+</div>
+</div>
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
  <script>
      
@@ -65,5 +73,6 @@
 
 
  </script>
-
+</body>
 </html>
+
