--- a/views/cadastrar.handlebars
+++ b/views/cadastrar.handlebars
@@ -1,15 +1,17 @@
 <body class="home">
 
-
-<main>     
-    <div  class="container">                                                                                                                 <!-- MAIN Area de conteudo principal do site-->                                                                                                                   <!-- MAIN Area de conteudo principal do site-->
+    <div  class="container">  
+        
+        <div class="row" id="">
+    <h1 id="h1login">Registrar Usuário</h1>
+        </div>                 
+                                                                                                      <!-- MAIN Area de conteudo principal do site-->                                                                                                                   <!-- MAIN Area de conteudo principal do site-->
         <div id="registrar" class="row justify-content-center align-items-center" >
             <div class="container-registrousuario">  
                      <div id="registro-row" class="row justify-content-center align-items-center" >                 
                             <form id="registrar-form" name="registrar" class="form" action="/cadastrar" onsubmit="return senhaForm()" method="POST">
-                                <h2 class="text-center text-info">Registrar Usuário</h2>
                             <!------------------------------------------------------------------------>
-                            
+
                                 <div class="form-group" >
                                     <label for="name" class="text-info" >Nome Completo:</label>
                                     <input type="text" name="name" id="name" class="form-control">
@@ -35,7 +37,7 @@
             </div>
         </div>
         </div>  
-    </main>
+
 
 </body>
 
