--- a/views/gerenciaalterar.handlebars
+++ b/views/gerenciaalterar.handlebars
@@ -3,8 +3,7 @@
 
    
 </script>
-
-<main>                                                                                                                     <!-- MAIN Area de conteudo principal do site-->                                                                                                                   <!-- MAIN Area de conteudo principal do site-->
+                                                                                                                   <!-- MAIN Area de conteudo principal do site-->                                                                                                                   <!-- MAIN Area de conteudo principal do site-->
         <div id="registrar" class="row justify-content-center align-items-center" >
             <div class="container-registrousuario">  
                      <div id="registro-row" class="row justify-content-center align-items-center" >                 
@@ -36,7 +35,6 @@
                 </div>
             </div>
         </div>
-    </main>
 
 </body>
  
