--- a/views/maps.handlebars
+++ b/views/maps.handlebars
@@ -74,25 +74,17 @@ infowindow.open(map,marker);
 }
 </script>
 
-<body>  
-  
+<body class="maps">
+<main>
 	<div id="map"></div>
- 
-		<style> 
-			#map {      
-    position: absolute;
-		height: 100% !important;
-		width: 100% !important;
-    }
 
-    }
-     #titulomap{
-      margin-bottom: -15px;
-      text-align: center;
-    }
-	</style>
+
+</main>
+
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjRopAliYHfukxfnfe9bQmG-D_ero4RoE&callback=iniciarMap"></script>    
 
+</body>
 </html>
