--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -16,18 +16,31 @@ if(JSON.parse(sessionStorage.getItem('session')) == undefined ) {
 </script>
 
 <body class="home">
+ <div  class="container"> 
 
-  <div class="materialize"  >
-    <h2> Modals </h2>
-      <a href="#terms" class="btn orange modal-trigger"> Terms & Conditions</a>
+<div class="row" id="">
+    <h2 id="h2home">Controle de manobras</h2>
 
-      <div class="modal" id="terms">
-          test
+    <h1 id="h1home">Estimated Arrivals</h1>
+</div>
 
-      </div>
+<h2>Modals</h2>
 
+<a href="#terms" class="btn modal-trigger"> termos ..</a>
+
+<div class="modal" id="terms">
+  <div class="modal-content">
+<h4>Teste Modal</h4>>
+<p>Termos ..........apaspkaskp</p>
+</div>
+  <div class="modal-footer">
+    <a href="#" class="modal-close btn orange"> Agree & Close</a>
   </div>
+</div>
 
+
+</div>
+  
 
 
 
