--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,17 +4,17 @@
 <div  class="container">
 
 <div class="row" id="">
-    <h2 id="h2home">Controle de manobras</h2>
-
-    <h1 id="h1home">Estimated Arrivals</h1>
+    <h1 id="h1login">Login</h1>
 </div>
 
-<div id="list" class="row">
+<div id="listlogin" class="row " >
 
-    <ul id="navioslist">
-                                <h2 class="" >Login</h2>
+     <div id="login-box" class="col-md-12">
+
+    <ul id="login">
+                
                                 <div class="form-group">
-                                    <label for="username" class="text-info">Usuário:</label><br>
+                                    <label for="username" class="text-info active">Usuário:</label><br>
                                     <input type="text" name="email" id="username" class="form-control">
                                 </div>
                                 <div class="form-group">
@@ -30,7 +30,7 @@
      </form>
    
     </ul>
-
+</div>
 </div>
 </div>
 
